# advanced_c_lab

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
scripts/: check.sh
src/01_pointer_lab/: main.c
src/02_arena_allocator/: arena.c  arena.h  main.c
src/03_hash_table/: hash_table.c  hash_table.h  main.c
src/04_linux_file_tool/: main.c
src/05_protocol_parser/: main.c  protocol_parser.c  protocol_parser.h
src/06_ring_buffer/: main.c  ring_buffer.c  ring_buffer.h
src/07_state_machine/: main.c  state_machine.c  state_machine.h
src/08_memory_bugs/: main.c
src/09_unit_test_framework/: main.c  mini_test.c  mini_test.h
src/10_serial_protocol_parser/: main.c  serial_parser.c  serial_parser.h
src/11_mini_malloc/: main.c  mini_malloc.c  mini_malloc.h
src/12_linux_process_pipe/: main.c
